# mteval

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  aclocal.m4  b2  configure.ac
data/: Makefile.am  hyp1  hyp2  ref
m4/: ax_boost_base.m4  ax_boost_program_options.m4
mteval/: BLEUEvaluator.cc  CMakeLists.txt  Evaluator.h  EvaluatorFactory.cc  RIBESEvaluator.cc  Statistics.h  WEREvaluator.cc  utils.cc
src/: BLEUEvaluator.cc  BLEUEvaluator.h  Dictionary.h  Evaluator.h  Makefile.am  NISTEvaluator.cc  NISTEvaluator.h  RIBESEvaluator.cc  RIBESEvaluator.h  WEREvaluator.cc  WEREvaluator.h  main.cc  utils.h
src/include/: Makefile.am
src/include/mteval/: BLEUEvaluator.h  Dictionary.h  Evaluator.h  EvaluatorFactory.h  NISTEvaluator.h  RIBESEvaluator.h  Statistics.h  WEREvaluator.h  utils.h
src/lib/: BLEUEvaluator.cc  Dictionary.cc  EvaluatorFactory.cc  Makefile.am  NISTEvaluator.cc  RIBESEvaluator.cc  Statistics.cc  WEREvaluator.cc  utils.cc
src/test/: Makefile.am  statistics_test.cc
test/: CMakeLists.txt  statistics_test.cc
