bin_PROGRAMS = mteval

mteval_SOURCES = \
    BLEUEvaluator.cc \
    BLEUEvaluator.h \
    Dictionary.h \
    Evaluator.h \
    main.cc \
    NISTEvaluator.cc \
    NISTEvaluator.h \
    RIBESEvaluator.cc \
    RIBESEvaluator.h \
    utils.h \
    WEREvaluator.cc \
    WEREvaluator.h \
    ;

LDADD = -lboost_program_options

